--- a/NotepadPlusPlus/NotepadPlusPlus.csproj
+++ b/NotepadPlusPlus/NotepadPlusPlus.csproj
@@ -55,7 +55,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\ReplaceAllViewModel.cs" />
+    <Compile Include="ViewModels\ReplaceViewModel.cs" />
+    <Compile Include="Views\ReplaceAllWindow.xaml.cs">
+      <DependentUpon>ReplaceAllWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ReplaceWindow.xaml.cs">
+      <DependentUpon>ReplaceWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\AboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FindWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -66,6 +78,7 @@
     <Compile Include="Helper\RelayCommand.cs" />
     <Compile Include="Models\TextBoxCustom.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModels\FindViewModel.cs" />
     <Compile Include="Views\AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
@@ -75,10 +88,21 @@
     </Compile>
     <Compile Include="ViewModels\MainTabItemsViewModel.cs" />
     <Compile Include="Helper\ViewModelPropertyChange.cs" />
+    <Compile Include="Views\FindWindow.xaml.cs">
+      <DependentUpon>FindWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\ReplaceAllWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ReplaceWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
